2006-07-13  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/nsconf.c:
	* nsthread/thread.c:
	* nsthread/pthread.c: Don't enforce an upper bound on the stack
	size, use the OS provided default.  It only makes sense to
	*reduce* the size of the stack if you have many threads and you
	know for sure you have low stack usage.  As this is (currently) a
	process-wide setting, you never can be sure...

	* nsd/cookies.c: Fix bug with missing path when setting cookies.
	* tests/cookies.test: Add tests so this doesn't happen again...

2006-07-13  Bernd Eidenschink  <eide@users.sourceforge.net>

	* nsd/return.c: Workaround in function ReturnCharData: mark
	connection to return in chunked encoding when the output encoding
	is not default UTF-8.

2006-07-12  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsd/log.c: Fixed command building in LogToTcl when 
	registered script contains blanks. 

2006-07-10  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/driver.c: Fixed crash when accessing writer 
	sock after it has been submitted to the queue

	Fixed crash and put back functinality to make nsopenssl
	work again, in one of the previous changes that got broken.

2006-07-10  Stephen Deasey  <sd@groks.org>

	* nsd/nsd.h:
	* nsd/driver.c:
	* nsd/connio.c: Create wrappers for the driver callback functions
	and document. Wrap some of the messy error reporting code.

2006-07-08  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/limits.c:
	* tcl/limits.tcl:
	* nsd/Makefile:
	* include/ns.h:
	* nsd/nsd.h:
	* nsd/conn.c:
	* nsd/init.c:
	* nsd/tclcmds.c:
	* tests/ns_limits.test:
	* test/ns_conn.test:
	* tests/test.nscfg: Add new ns_limits_ commands to manipulate
	per-request limits. Not hooked up to request processing yet,
	requires some work to move conn allocation back into the driver
	code.

	* include/nsthread.h:
	* nsthread/time.c:
	* nsd/tclcache.c:
	* tests/ns_cache.test: Add per-cache default timeouts. Timeout
	values passed using the -timeout switch can now be absolute or